# moore-kernel

./: ARCHITECTURE_PLAN.md  BRIEF_CONTROL_SPEC.md  BRIEF_LANGUAGE_REFERENCE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENHANCEMENT_PLAN.md  LITANIES.md  MOORE_DEMESNE.md  Makefile  README.md  RESEARCH.md  RESEARCH_2.md  RESEARCH_3.md  RESEARCH_4.md  SPEC.md  test_field  test_lsp_init.json  test_parse.rbv
brief-compiler/: .gitignore  AGENTS.md  BRIEF_LANGUAGE_REFERENCE.md  BRIEF_v011_PLAN.md  CLAUDE.md  Cargo.toml  HARDWARE_CONFIG.md  IMPLEMENTATION_PLAN.md  LICENSE  MISSING_FEATURES.md  Makefile  TARGET_ABSTRACTION.md  test_lsp.json  test_lsp2.json
brief-compiler/.opencode/plans/: EMBEDDED_BRIEF_2.2_IMPLEMENTATION_PLAN.md  ebv-highlighter-plan.md
brief-compiler/docs/: UNIFIED_BRIEF_3.0_ARCHITECTURE.md
brief-compiler/docs/old_docs/: BUGS_QUICK_REFERENCE.md  GAP-ANALYSIS.md  GUIDE.md  IMPLEMENTATION-PROGRESS.md  IMPLEMENTATION-UNIVERSAL-FFI-MAPPERS.md  PARSER_BUGS_INDEX.md  SHOPPING_CART_QUICK_START.md  VALIDATION_REPORT.md
brief-compiler/examples/: README.md  async_mutual_exclusion.bv  bank_transfer_system.bv  complex_workflow.bv  fizzbuzz.bv  sig_as_type.bv  simple_contract.bv  test_ffi.bv  test_ffi_minimal.bv  todo.d.ts  union_types.bv  vector_test.ebv
brief-compiler/examples/hello/: main.bv
brief-compiler/examples/hello-world/: README.md
brief-compiler/examples/simple-counter/: SPEC.md
brief-compiler/lib/mappers/: README.bv
brief-compiler/lib/std/: io.bv  json.bv  math.bv  time.bv
brief-compiler/packaging/: brief-language.vsix
brief-compiler/scripts/: brief-install  rebuild-compiler
brief-compiler/spec/: INDEX.md  QUICK-REFERENCE.md  SPEC.md
brief-compiler/spec/old_docs/: DESIGN-ISSUE-1-GUARD-BLOCKS.md  DESIGN-ISSUE-2-COMMENTS.md  FFI-STDLIB-REFERENCE.md  FFI-USER-GUIDE.md  IMPLEMENTATION-PLAN-FFI-v6.2.md  IMPLEMENTATION-SUMMARY.md  SPEC-v6.1.md  STDLIB-REDESIGN.md  v4-brief-lang-spec.md  v4-build-plan.md  v4-frgn-design.md  v4-rendered-brief-spec.md  v4-testing.md
brief-compiler/src/: ast.rs  errors.rs  hardware_validator.rs  interpreter.rs  main.rs  parser.rs  parser.rs.bak  proof_engine.rs  rbv.rs  resolver.rs  sig_casting.rs  symbolic.rs  typechecker.rs  watch.rs
brief-compiler/src/analysis/: address_space.rs  cross_reference.rs  dataflow.rs  entry_point.rs  mod.rs
brief-compiler/std/: core.bv
brief-compiler/syntax-highlighter/: package.json  settings.json
brief-compiler/test_rstruct-build/: test_rstruct_glue.js
brief-control/bvc/: Cargo.toml
ebv/: kernel.ebv  (+1 more)
(+201 files in other folders)
