[workspace]
resolver = "2"
members = [
    "brief-compiler",
    "brief-control/bvc",
    "kernel/msh",
    "kernel/drivers",
    "kernel/security",
    "kernel/moore",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Moore Kernel Team"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package.moore]
opt-level = 0
