[package]
name = "counsel"
version = "0.1.0"
edition = "2024"
description = "The Brief compiler — Counsel prepares the Brief to obtain the Writ"

[lib]
name = "counsel_lib"
path = "src/lib.rs"

[[bin]]
name = "counsel"
path = "src/main.rs"

[dependencies]
logos = "0.13"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
notify = "6.1"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
lsp-server = "0.7"
lsp-types = "0.93"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
open = "5"
dirs = "5"
tokio = { version = "1.51.1", features = ["full"] }
wasm-bindgen = "0.2.117"
js-sys = "0.3.94"
regex = "1.12.3"

[dev-dependencies]
tempfile = "3.10"
