[package]
name = "bvc-compiler"
version = "0.1.0"
edition = "2021"
description = "Brief Control compiler — compiles .bvc to .writ mount manifests"

[[bin]]
name = "bvc-compiler"
path = "src/main.rs"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
thiserror = "1.0"
anyhow = "1.0"
